<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/aaa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Sign Up"
        android:textSize="30dp" />

    <ImageView
        android:layout_width="276dp"
        android:layout_height="87dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/fd" />
    <EditText
        android:id="@+id/user"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/cpassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirmpassword"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Email"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_accessibility_black_24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Age"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_height="35dp"
            android:layout_width="wrap_content"
           android:text="@string/already_registered"

            />
        <TextView
            android:id="@+id/signin1"
            android:layout_height="35dp"
            android:layout_width="wrap_content"
            android:text="signin"
            android:textSize="20dp"
            android:textColor="@color/coloryellow"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
    </LinearLayout>




</LinearLayout>